<resources>
    <string name="app_name">Gravedad Zero</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="woman_climbing">Woman climbing</string>
    <string name="bulder_gravedad_zero">GRAVEDAD ZERO</string>
    <string name="email">Email</string>
    <string name="sing_up">sing up</string>
    <string name="nuevo_usuario">Nuevo usuario</string>
    <string name="contrase_a">contraseña</string>
    <string name="olvidaste_la">Olvidaste la</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="usernick">userNick</string>
    <string name="bloques">Bloques</string>
    <string name="misproyectos">Mis Proyectos</string>
    <string name="noticias">Noticias</string>
    <string name="navigation_open">1</string>
    <string name="navigation_close">0</string>
    <string name="nick">Nick</string>
    <string name="cursos_activos">Cursos Activos:</string>
    <string name="bonos_de_sesion">Bonos de sesión:</string>
    <string name="actualizar">Actualizar</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="v_lido_hata">Válido hata</string>
    <string name="_7">7</string>
    <string name="user">User</string>
    <string name="actualizar_datos">Actualizar Datos</string>
    <string name="a_adir_a_mis_proyectos">Añadir a mis proyectos</string>
    <string name="nombre">Nombre del Bloque</string>
    <string name="dificultad">Dificultad</string>
    <string name="_10_10_22">10/10/22</string>
    <string name="completado">Completado</string>
    <string name="con_volumen_amarillo">Con Volumen Amarillo</string>
    <string name="tarifas_y_cursos">Tarifas y Cursos</string>
    <string name="horario_de_verano">Horario de Verano</string>
    <string name="entrar_como">Entrar como</string>
    <string name="usuario_an_nimo">usuario anónimo</string>
    <string name="bulder">bulder</string>
    <string name="compartir_bloque">Compartir Bloque</string>
    <string name="persona_colocandose_los_pies_de_gato">persona colocandose los pies de gato</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="filter">filter</string>
    <string name="menu_filtrado_de_bulder">menu filtrado de bulder</string>
    <string name="rea_personal">Área Personal</string>
    <string name="bloque_completado">Bloque completado</string>
    <string name="fecha">Fecha</string>
    <string name="to">to</string>
    <string name="buscar">Buscar</string>
    <string name="todos">Todos</string>
    <string name="todas_las_fechas">Todas las fechas</string>
    <string name="ultimo_mes">Último mes</string>
    <string name="ultimos_3_meses">Últimos tres meses</string>
    <string name="ultimos_seis_meses">Últimos seis meses</string>
    <string name="ultimo_a_o">Último año</string>
    <string name="manos_llenas_de_magnesio_dando_una_palmada">Manos llenas de magnesio dando una palmada</string>
    <string name="enbudo_de_filtrado">Enbudo de filtrado</string>
    <string name="s_mbolo_de_m_s">Símbolo de más</string>
    <string name="nombre_del_bulder">Nombre del bulder</string>
    <string name="foto_cargada_con_el_bulder_editado">foto cargada con el bulder editado</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="camara">Cámara</string>
    <string name="galer_a">Galería</string>
    <string name="compartir">Compartir</string>
    <string name="newPass">New password</string>
    <string name="a_mis_proyectos">A mis proyectos</string>

    <string name="label_brush">Brosses</string>
    <string name="label_shape">Formes</string>
    <string name="label_oval">Ovale</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Ligne</string>
    <string name="label_arrow">Flèche</string>
    <string name="label_emoji">Frimousses</string>
    <string name="label_sticker">Autocollant</string>
    <string name="label_eraser">Gomme</string>
    <string name="label_eraser_mode">Mode Gomme</string>
    <string name="label_text">Texte</string>
    <string name="label_filter">Filtres</string>
    <string name="label_adjust">Ajuster</string>
    <string name="linea">Linea</string>
    <string name="flecha">Flecha</string>
    <string name="ovalo">Óvalo</string>
    <string name="rect_ngulo">Rectángulo</string>
    <string name="lapiz">Lápiz</string>
    <string name="brocha">Brocha</string>
    <string name="opacidad">Opacidad</string>
    <string name="ok">OK</string>


    <string-array name="Fechas">
        <item>Último mes</item>
        <item>Últimos dos meses</item>
        <item>Últimos tres meses</item>
        <item>Todas las fechas</item>
    </string-array>

</resources>