<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="ExtraText">
    <group
        android:id="@+id/group1">
        <item
            android:id="@+id/bloquesMenu"
            android:icon="@drawable/ic_baseline_mode_24"
            android:title="@string/bloques" />
    </group>

    <group
        android:id="@+id/group2">
            <item
                android:id="@+id/misProyectosMenu"
                android:icon="@drawable/ic_folder_24"
                android:title="@string/misproyectos" />
    </group>

    <group
        android:id="@+id/group3">
            <item
                android:id="@+id/noticiasMenu"
                android:icon="@drawable/ic_notifications_24"
                android:title="@string/noticias" />
    </group>

    <group
        android:id="@+id/group4">
            <item
                android:id="@+id/areaPersonalMenu"
                android:icon="@drawable/ic_person_pin_24"
                android:title="@string/rea_personal" />
    </group>
    <group
        android:id="@+id/group5">
        <item
            android:id="@+id/cerrarSesion"
            android:icon="@drawable/close_24"
            android:title="Cerrar Sesión" />
    </group>

</menu>