<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imagenLogin"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/logingLayout"
            app:srcCompat="@drawable/sala_bulder_gravedad_zero_login"
            android:scaleType="centerCrop"
            android:contentDescription="@string/woman_climbing"
            />

        <LinearLayout
            android:id="@+id/logingLayout"
            app:layout_constraintTop_toBottomOf="@+id/imagenLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="540dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:padding="32dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bulder_gravedad_zero"
                android:textSize="30sp"
                android:layout_marginBottom="16dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/pollerone_regular"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginVertical="8dp"
                app:startIconDrawable="@drawable/ic_email_24"
                app:boxStrokeColor="@color/secondaryColor"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTL"
                android:layout_width="match_parent"
                app:startIconDrawable="@drawable/ic_lock_24"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:fontFamily="@font/pollerone_regular"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/olvidaste_la"
                    android:textSize="11sp"
                    />
                <Button
                    android:id="@+id/forgotPasswordBTT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contrase_a"
                    android:textSize="11sp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginBTT"
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="54dp"
                android:layout_margin="8dp"
                android:text="@string/login"
                android:textSize="20sp"
                />


            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevo_usuario"
                    />
                <Button
                    android:id="@+id/singupBTT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sing_up"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

            </LinearLayout>


            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrar_como"
                    />
                <Button
                    android:id="@+id/anonymousUserBTT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/usuario_an_nimo"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
