<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryLightColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryLightColor">


        <androidx.cardview.widget.CardView
            android:id="@+id/infoCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/persona_colocandose_los_pies_de_gato"
                android:background="@color/primaryColor"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:contentDescription="@string/persona_colocandose_los_pies_de_gato"
                    android:background="@drawable/sala_bulder_gravedad_zero_quienes_somos"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="6dp">

                    <TextView
                        android:id="@+id/bonosTF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/bonos_de_sesion"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/numeroBonosTF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        tools:text="@string/_7"
                        android:textSize="32sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/actualizarDatosCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:backgroundTint="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoCard"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/logingLayout"
                app:layout_constraintTop_toBottomOf="@+id/infoCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/actualizar_datos"
                    android:textAlignment="center"
                    android:layout_marginVertical="12dp"
                    android:textSize="22sp"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/userNickTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nick"
                    android:layout_marginVertical="8dp"
                    app:startIconDrawable="@drawable/ic_person_pin_24"
                    app:boxStrokeColor="@color/secondaryColor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userNick"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/user"
                        app:errorEnabled="true"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email_24"
                    app:boxStrokeColor="@color/secondaryColor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/user_gmail_com"
                        android:fontFamily="@font/pollerone_regular"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordTF"
                    android:layout_width="match_parent"
                    app:startIconDrawable="@drawable/ic_lock_24"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/password"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:text="@string/password"
                        android:fontFamily="@font/pollerone_regular" />



                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:startIconDrawable="@drawable/ic_lock_24"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/newPass"
                    app:endIconMode="password_toggle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:text="@string/password"
                        android:fontFamily="@font/pollerone_regular" />



                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/actualizarBTT"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_gravity="center"
                    android:layout_width="240dp"
                    android:layout_height="54dp"
                    android:layout_margin="8dp"
                    android:text="@string/guardar"
                    android:textSize="20sp"
                    />



            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

